0.68.2
------
1. Update versions XBar menu files - taken from Bespin r641
2. Disable XBar support for KDevelop - as per Bespin.
3. Classic style for QWizzard.

0.68.1
------
1. Fix reading, and saving, of 'dark inverted gradient' setting.
2. Better button metrics - especially for buttons with menus.
3. Fix different sized buttons in VirtualBox dialogs. (When determing if
   button should take icon size into account (a la Gtk2), dont use the
   'auto-default' setting, just check if its in a QDialogButtonBox).
4. Add 2 pixels to the left/right of max rounded buttons.
5. Dont draw window border/buttons into pixmaps when compositing is active.
6. Use KIconLoader to determine icon sizes - if compiled against KDE4.
7. Dont do 'fix corners of round frames where frame background is different to window
   background' (from 0.67.6) for frames within QAbstractItemView. Improves
   appearance of KPackageKit.
8. Workaround some issues with window style and compositing - where parts of the frame
   are not updated.
9. Speed up background gradients by drawing into a 16*256 size pixmap, scaling        
   this to the correct height, and then tiling the pixmap.
   
0.68.0
------
1. New options:
    Control whether icons are displayed in menus
    Force alternate colours in listviews
    Square selections in listviews
    Dont make 'auto-default' buttons larger - makes them less Gtk2 like though.
2. Fix compilation under KDE 4.2

0.67.6
------
1. Fix corners of round frames where frame background is different to window
   background.
2. Only use icon metrics for auto-deault buttons that are either within a
   QDialogButtonBox, or are on a KFileWidget.
3. Give toolbar items a 1 pixel spacing - so that there is at least a gap between
   konqueror's location and search edit fields.
4. Fix saving of menubar item 'colour on mouse over' setting.
5. Fix bleed of Agua shine in scrollbar buttons.
6. Offset sunken slider thumbs to improve appearance.